fix overflow in avatar page

--- a/avatar/avatar_style.css
+++ b/avatar/avatar_style.css
@@ -267,6 +267,7 @@ body {
     margin:0;
     background-color:#FAF8EF;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 #avatar {
